Update string per testing on Android <=11 :(

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,5 +204,5 @@
     <string name="notification_channel_overlay_description">The persistent overlay control notification</string>
     <string name="overlay_accessibility_service_label">Red Moon Overlay</string>
     <string name="pref_title_use_accessibility_service">Use Accessibiltiy Service</string>
-    <string name="pref_summary_use_accessibility_service">Cover the home screen (Android 12+) and status/navigation bars (Android 10+)</string>
+    <string name="pref_summary_use_accessibility_service">Enable to cover up the home screen and status/navigation bars on Android 12+</string>
 </resources>
